--- build 1042

- fix Youtube and SoundCloud logins
- Download manager fixes

--- build 1041

- fixed Login

--- build 1040

- Updated translations
- Narration updates

--- build 1039

- Now integrated with the new StoryMaker.org!  Signup, login and publish!

--- build 1038

- Fix: Many Right-to-left UI bugs
- Added progress notification for tor downloads.
- Fix: several states resulting in blank content pack thumbnails should now be caught
- expansion file checking/blocking now happens when corresponding menu items are clicked
- file/update downloads at app startup no longer lock ui (poller removed)
- ClipCardView trim bar respects RTL layouts. 
- Fix: scrolling away from ClipCardView during audio recording
- Fix: crashes due to multiple simultaneous audio recordings
- ClipCardsPlayer playback progress now respects clip trim points (affects ReviewCard, NarrationPopup)

--- build 1037

- Remove old references to 'Liger' codename
- Fix: regression to title order
- Fix: Content and Learning Guide thumbnails are blank after completed download
- StoryPath performance improvements

--- build 1036

- Fix many content download issues
- Fix crash on rotate on publish screen
- Restore Internet Archive uploading

--- build 1035

- Fix: content pack table of contents out of order
- Fix: Clip Playback shows a double thumbnail
- Fix: Narration isn't saved unless added to first clip in a series

--- build 1034

- Download progress spinner for content packs
- Many download fixes
- Huge update to Burundi pack

--- build 1033

- fix localization of content pack indexes
- fix Tor support for content pack downloads
- many small fixes in Burundi pack text
- Download bugfixes
- fix duplicate downloads issue
- update Burundi content pack

--- build 1032

- Content pack download bugfixes
- Translation updates
- Graphics updates

--- build 1031

- New Content Pack Download system

--- build 1030

- Multitrack audio / narration support
- Bugfixes

--- build 1029
