@@ -226,12 +226,23 @@
 	        android:drawableLeft="@drawable/ic_nav_media_settings"
 	        android:gravity="left|center_vertical"
 	        android:text="@string/menu_settings"
-	        android:textColor="#dddddd" /> 
-	
-	    <View
-	        android:layout_width="fill_parent"
-	        android:layout_height="1dp"
-	        android:background="#33999999" />
+	        android:textColor="#dddddd" />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="#33999999" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/textViewVersion"
+            android:layout_gravity="center"
+            android:textColor="#ff555555"
+            android:paddingTop="8dp"
+            android:layout_weight="1" />
 	
 	</LinearLayout>
 
